# Evidra

./: .env.example  .gitignore  AGENTS.md  Makefile  PLANS.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ai/: client.py  services.py
ai/prompts/: company_context.py  evidence.py  jd.py  matching.py  practice.py  prepkit.py  preview.py  profile.py  stories.py
ai/schemas/: company_context.py  evidence.py  jd.py  matching.py  practice.py  prepkit.py  preview.py  profile.py  stories.py
apps/accounts/: forms.py  urls.py  views.py
apps/documents/: forms.py  models.py  services.py  storage.py  urls.py  views.py
apps/evidence/: forms.py  models.py  services.py  urls.py  views.py
apps/generations/: models.py  services.py
apps/matching/: forms.py  models.py  services.py  urls.py  views.py
apps/opportunities/: company_context.py  forms.py  models.py  role_packs.py  services.py  urls.py  views.py
apps/payments/: forms.py  models.py  services.py  urls.py  views.py
apps/plans/: forms.py  models.py  services.py  urls.py  views.py
apps/practice/: forms.py  models.py  services.py  urls.py  views.py
apps/prepkits/: apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/previews/: apps.py  models.py  services.py  urls.py  views.py
apps/profiles/: forms.py  models.py  services.py  urls.py  views.py
apps/sprints/: apps.py  models.py  services.py
apps/stories/: forms.py  models.py  urls.py  (+2 more)
config/: settings.py  urls.py
templates/: base.html  home.html
tests/: test_settings.py
(+153 files in other folders)
